# easy-download

./: Cargo.toml
example/download_with_one/: Cargo.toml
example/download_with_one/src/: main.rs
src/: lib.rs  util.rs
src/core/: block.rs  file_request.rs  mod.rs  request.rs  state.rs  task.rs
src/tests/: file_request.rs  mod.rs  request.rs
tests/: db.rs  file_request.rs  mod.rs
