[package]
name = "easy-download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.23", features = ["stream"] }
serde = { version = "1.0.195", features = ["derive"] }
anyhow = "1.0.79"
byte-unit = { version = "5.1.3", features = ["byte"] }
futures = "0.3.30"
