workspace = { members = ["example/download_with_one"] }
[package]
name = "easy-download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.23", features = ["stream"] }
serde = { version = "1.0.195", features = ["derive"] }
anyhow = "1.0.79"
sled = "0.34.7"
serde_json = "1.0.111"
