[package]
name = "download_with_one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easy-download = { path = "../../" }
tokio = "1.35.1"
byte-unit = { version = "5.1.3", features = ["byte"] }
futures = "0.3.30"
anyhow = "1.0.79"
