[package]
name = "download_with_one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easy-download = { path = "../../" }
tokio = "1.35.1"
byte-unit = { version = "5.1.3", features = ["byte"] }
anyhow = { version = "1.0.79", features = [] }
sled = "0.34.7"
serde_json = "1.0.111"